Don't shade provided dependencies